--- a/style2test.css
+++ b/style2test.css
@@ -65,3 +65,13 @@
     height: 400px;
     margin: 0 40px;
 }
+
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+} */
+
+::-webkit-scrollbar {
+    display: none;
+}
